--- a/web/package.json
+++ b/web/package.json
@@ -42,9 +42,9 @@
     "globals": "^16.4.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.44.0",
-    "vite": "npm:rolldown-vite@7.1.12"
+    "vite": "^6.0.7"
   },
-  "overrides": {
-    "vite": "npm:rolldown-vite@7.1.12"
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
