--- a/web/biome.json
+++ b/web/biome.json
@@ -1,13 +1,4 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.2.5/schema.json",
-  "vcs": {
-    "enabled": false,
-    "clientKind": "git",
-    "useIgnoreFile": false
-  },
-  "files": {
-    "ignoreUnknown": false
-  },
   "formatter": {
     "enabled": true,
     "indentStyle": "space",
@@ -24,7 +15,8 @@
       "quoteStyle": "single",
       "bracketSpacing": true,
       "semicolons": "always",
-      "jsxQuoteStyle": "single"
+      "jsxQuoteStyle": "single",
+      "trailingCommas": "none"
     }
   },
   "assist": {
