--- a/web/package.json
+++ b/web/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "lint": "biome format --write"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
