--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "server_2.0",
-  "version": "1.0.50",
+  "name": "server",
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts"
+    "dev": "bun run --watch src/index.ts",
+    "build": "bun build ./src/index.ts --production --target bun --outdir build --minify",
+    "start": "bun run ./build/index.js"
   },
   "dependencies": {
     "@elysiajs/bearer": "^1.4.1",
