chore: add db scripts

--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "bun run --watch src/index.ts",
     "build": "bun build ./src/index.ts --production --target bun --outdir build --minify",
-    "start": "bun run ./build/index.js"
+    "start": "bun run ./build/index.js",
+    "db:deploy": "bun prisma migrate deploy",
+    "db:generate": "bun prisma generate"
   },
   "dependencies": {
     "@elysiajs/bearer": "^1.4.1",
